# wallet

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  package.json  vite.config.ts
docs/: docs.css  index.md
docs/app/: 01-overview.md  02-install.md  03-setup.md  04-config.md  05-bridges.md
docs/app/account/: 01-overview.md  02-transaction.md  03-block.md
docs/app/exchange/: 03-order.md  (+5 more)
docs/blockchain/: 01-motivation.md  02-incentives.md  03-blockchain.md  04-accounts.md  05-transactions.md  06-programs.md
docs/node/: 01-install.md  02-config.md  03-control.md
public/: robots.txt  site.webmanifest  sitemap.xml
src/: app.tsx  config.json  main.tsx
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-web/: site.webmanifest
src/components/: account.tsx  address.tsx  alert.tsx  asset.tsx  bridge.tsx  guards.tsx  license.tsx  navbar.tsx  prompter.tsx  transaction.tsx  vault.tsx
src/configs/: config.ts  mainnet.config.json  mainnet.json  regtest.config.json  regtest.json  testnet.config.json  testnet.json
src/core/: app.tsx  exchange.tsx  react.ts  storage.ts  swap.tsx  text.ts  wallet.ts  wormhole.tsx
src/pages/: account.tsx  block.tsx  bridge.tsx  configure.tsx  depository.tsx  error.tsx  explorer.tsx  home.tsx  hype.tsx  interaction.tsx  legal.tsx  program.tsx  restore.tsx  transaction.tsx
src/styles/: backgrounds.css  breakpoints.css  colors.css  customs.css  shadows.css  transforms.css  transitions.css
(+54 files in other folders)
